# sales-agent-chat

./: .gitignore  README.md
backend/: Dockerfile  main.py  prompt.txt  pyproject.toml  requirements.txt
backend/core/: config.yaml
backend/core/chat_history/: __init__.py  chat_history.py
backend/core/llms/: base_llm.py  bedrock_llm.py  groq_llm.py  llm_factory.py  openai_llm.py
backend/core/models/chat_message/: __init__.py  chat_message.py
backend/core/models/llms/: llm_streams.py
backend/core/models/users/: user_models.py
backend/core/prompts/: agent_prompt.py
backend/core/sse/: __init__.py  sseclient.py
backend/core/tools/: __init__.py  tools.py
backend/core/tools/extras/: extras_tools.py
backend/core/tracing/: base_tracer.py  langfuse_tracer.py  tracer_factory.py
backend/core/utilities/: config.py  context.py  dates.py  logger.py  stream_events.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/src/: util.ts
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: AssistantLoader.tsx  Chat.tsx  Loader.tsx  Message.tsx
frontend/src/components/tools/: AppointmentAvailability.tsx  AppointmentConfirmation.tsx  DealershipAddress.tsx  Weather.tsx
frontend/src/components/ui/: AssistantLoader.tsx  Message.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: sse.ts
frontend/src/styles/: loader.css
frontend/src/types/: index.ts
infrastructure/: docker-compose.yml
